fixing column align and css

--- a/src/components/components.css
+++ b/src/components/components.css
@@ -1,8 +1,9 @@
 .editButton {
-    font-size: 10px;
+    font-size: 12px;
     color: #e29933;
     border-color: #e29933;
     box-shadow: none;
+    width: fit-content;
 }
 
 .editButton:hover {
@@ -23,9 +24,20 @@
 .innerContainer {
     display: flex;
     flex-direction: column;
+    flex: 1;
+    text-align: left;
 }
 
 .innerContainer2 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+    flex: 1;
+    justify-content: left;
+}
+
+.innerContainer3 {
     display: flex;
     flex-direction: row;
     align-items: center;
